# graphlens

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  cliff.toml  codecov.yml  pyproject.toml  ruff.toml  taskfile.dist.yaml  ty.toml
.claude/skills/adapter-generator/: SKILL.md
.claude/skills/adapter-generator/assets/: adapter_template.md  visitor_template.md
.claude/skills/adapter-generator/references/: ARCHITECTURE.md  CONTRACTS.md  INFRASTRUCTURE.md  PATTERNS.md
.claude/skills/python-test-generator/: SKILL.md
.claude/skills/python-test-generator/assets/: factory_template.md
.claude/skills/python-test-generator/references/: ARCHITECTURE.md  FIXTURES.md  PATTERNS.md
.github/: dependabot.yml
.github/workflows/: bench.yml  ci-cli.yml  ci-core.yml  ci-go.yml  ci-link.yml  ci-php.yml  ci-python.yml  ci-rust.yml  ci-typescript.yml  docker.yml  docs.yml  release.yml
articles/: devto-graphlens-en.md  habr-graphlens-ru.md
benchmarks/: README.md  projects.json  run_benchmarks.py
docs/superpowers/plans/: 2026-06-18-graph-resolution-redesign-python.md  2026-06-20-typescript-resolution-redesign.md
docs/superpowers/specs/: 2026-06-18-graph-resolution-redesign-design.md  2026-06-20-typescript-resolution-redesign-design.md
examples/: agent_pydantic_ai_mcp.ipynb  analyze_python_project.ipynb  analyze_python_project.py  analyze_typescript_project.ipynb  analyze_typescript_project.py  demo_cross_language.py  demo_resolved_graph.py  demo_resolved_graph_ts.py  neo4j_export.py  visualize_graph.py
examples/demo-ts-project/: package.json
examples/demo-ts-project/src/app/: index.ts  service.ts  utils.ts
src/code_graph/: __init__.py  exceptions.py  registry.py
src/code_graph/contracts/: __init__.py  adapter.py  backend.py
src/code_graph/models/: __init__.py  graph.py  nodes.py
src/code_graph/utils/: __init__.py  ids.py  span.py
src/graphlens/: __init__.py  diffing.py  exceptions.py  metrics.py  registry.py  serialization.py  status.py
src/graphlens/contracts/: __init__.py  adapter.py  backend.py  boundary.py  deps.py  reader.py  resolver.py
src/graphlens/models/: __init__.py  graph.py  nodes.py  relations.py
src/graphlens/utils/: __init__.py  boundaries.py  ids.py  roots.py  serde.py  span_index.py
tests/: conftest.py  helpers.py  test_contracts_adapter.py  test_contracts_backend.py  test_contracts_boundary.py  test_contracts_deps.py  test_contracts_reader.py  test_contracts_resolver.py  test_diffing.py  test_exceptions.py  test_graph_queries.py  test_metrics.py  test_models_graph.py  test_models_nodes.py  test_models_relations.py  test_registry.py  test_serialization.py  test_status.py  test_utils_boundaries.py  test_utils_ids.py  test_utils_roots.py  test_utils_serde.py  test_utils_span.py  test_utils_span_index.py
website/: README.md  docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts
website/docs/: intro.md
website/docs/adapters/: _category_.json  go.md  overview.md  php.md  python.md  rust.md  typescript.md  writing-an-adapter.md
website/docs/api-reference/: _category_.json  cli.md  contracts.md  exceptions.md  graphlens.md  models.md  registry.md
website/docs/ci-integration/: _category_.json  docker.md  github-actions.md  overview.md
website/docs/getting-started/: _category_.json  concepts.md  installation.md  quick-start.md
website/docs/graph-model/: _category_.json  boundaries.md  nodes.md  relations.md  serialization.md
website/docs/guides/: _category_.json  cli.md  cross-language.md  library-api.md  mcp-server.md  neo4j.md  querying.md  visualization.md
website/src/css/: custom.css
website/src/pages/: index.tsx
