[project]
name = "graphlens"
version = "0.1.1"
description = "Extensible polyglot code analysis framework with a graph IR"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Neko1313", email = "nikita.ribalchencko@yandex.ru" }
]
keywords = [
    "code-analysis",
    "graphlens",
    "ast",
    "tree-sitter",
    "static-analysis",
    "graph",
    "polyglot",
    "dependency-analysis",
    "python",
    "code-intelligence",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = []

[project.urls]
Repository = "https://github.com/Neko1313/graphlens"
Issues = "https://github.com/Neko1313/graphlens/issues"
Changelog = "https://github.com/Neko1313/graphlens/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.9.18,<0.11.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["packages/*"]

[project.optional-dependencies]
python = [
    "graphlens-python"
]
typescript = [
    "graphlens-typescript"
]

[dependency-groups]
lint = [
    "bandit>=1.9.3",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.0",
]

[tool.uv.sources]
graphlens-python = { workspace = true }
graphlens-typescript = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests", "packages/graphlens-python/tests"]

[tool.coverage.run]
source = ["graphlens", "graphlens_python"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
