[project]
name = "graphlens"
version = "0.6.1"
description = "Polyglot code-analysis framework — parse Python, TypeScript, Go and Rust into a shared graph IR with type-aware resolution"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Neko1313", email = "nikita.ribalchencko@yandex.ru" }
]
keywords = [
    "code-analysis",
    "static-analysis",
    "code-intelligence",
    "graph",
    "graph-ir",
    "tree-sitter",
    "ast",
    "call-graph",
    "dependency-graph",
    "code-navigation",
    "polyglot",
    "knowledge-graph",
    "lsp",
    "neo4j",
    "mcp",
    "monorepo",
    "python",
    "typescript",
    "go",
    "rust",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Go",
    "Programming Language :: JavaScript",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = []

[project.urls]
Repository = "https://github.com/Neko1313/graphlens"
Issues = "https://github.com/Neko1313/graphlens/issues"
Changelog = "https://github.com/Neko1313/graphlens/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.9.18,<0.12.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["packages/*"]

[project.optional-dependencies]
python = [
    "graphlens-python"
]
typescript = [
    "graphlens-typescript"
]
go = [
    "graphlens-go"
]
rust = [
    "graphlens-rust"
]
link = [
    "graphlens-link"
]
all = [
    "graphlens-typescript",
    "graphlens-python",
    "graphlens-go",
    "graphlens-rust",
    "graphlens-link"
]

[dependency-groups]
lint = [
    "bandit>=1.9.3",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]
notebook = [
    "ipykernel>=6.30.0",
    "jupyterlab>=4.4.0",
    "matplotlib>=3.10.0",
    "networkx>=3.5",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.0",
]

[tool.uv.sources]
graphlens-python = { workspace = true }
graphlens-typescript = { workspace = true }
graphlens-go = { workspace = true }
graphlens-rust = { workspace = true }
graphlens-link = { workspace = true }
graphlens-cli = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests", "packages/graphlens-python/tests"]

[tool.coverage.run]
source = ["graphlens", "graphlens_python"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
